example/gardener-local/controlplane/networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-everything-gardener-controlplane
  namespace: garden
spec:
  podSelector:
    matchExpressions:
    - key: app
      operator: In
      values:
      - gardener
    - key: role
      operator: In
      values:
      - admission-controller
      - apiserver
      - controller-manager
      - scheduler
  ingress:
  - from:
    - namespaceSelector: {}
      podSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0
  egress:
  - to:
    - namespaceSelector: {}
      podSelector: {}
    - ipBlock:
        cidr: 0.0.0.0/0
  policyTypes:
  - Egress
  - Ingress
